test/src/e2e_vm_tests/test_programs/should_fail/abi_impl_arity_mismatch/src/main.sw
contract;

abi MyContract {
    fn f();
}

impl MyContract for Contract {
    fn f(nondeclared_param : u64) -> bool {
        true
    }
}
